# Futurakart

./: .gitignore  .gitmodules  Futurakart.workspace  LICENSE  README.md  alias_rpi.sh  ros.conf  ros.conf.example  setup_all.bash
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/share/futurakart_2dnav/cmake/: futurakart_2dnavConfig.cmake
devel/share/moc_sensors/cmake/: moc_sensorsConfig.cmake
docs/: Navigation.md  README.md  ROS-Network.md  RPI-ROS-Installation.md  RPi-MBED-infos.md  Tutorial_base.md  Tutorial_base_emulation.md  Tutorials.md  Tutorials_vision.md  rtabmap-example.md
futurakart_2dnav/: CMakeLists.txt  package.xml
launch/: futurakart_configuration.launch
mbed/futurakart_msgs/: MotorDrive.h  MotorFeedback.h  Status.h
mbed/test_zero/: url
mecha/: pignon.scad
meshes/: fk_base.scad  pignon.scad  pignon.stl  pignon_sans_axe.scad  pignon_sans_axe.stl
méca/: pignon.scad
src/: libviso2  viso2_ros
src/ackermann_controller/include/ackermann_controller/: ackermann_controller.h
src/ackermann_controller/src/: ackermann_controller.cpp
src/dual_controller_interface/: CMakeLists.txt  package.xml
src/dual_controller_interface/include/dual_controller_interface/: dual_controller_interface.h
src/futurakart/futurakart_2dnav/: CMakeLists.txt  package.xml
src/futurakart/futurakart_2dnav/launch/: create_map.launch  map_localization.launch  odom_navigation.launch  start_nav.launch  start_visualization.launch
src/futurakart/futurakart_2dnav/launch/includes/: amcl.launch  gmapping.launch  mapping.rviz  move_base.launch  navigation.rviz  robot_setup_tf.launch  rtabmapping.launch
src/futurakart/futurakart_2dnav/launch/simulations/: futurakart_configuration_simu.launch
src/futurakart/futurakart_2dnav/maps/: _map.pgm  _map.yaml  _map_fablab_01112016.yaml  map_stand.yaml
src/futurakart/futurakart_2dnav/params/: costmap_common_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/futurakart/futurakart_2dnav/params/map_nav_params/: global_costmap_params.yaml
src/futurakart/futurakart_2dnav/params/odom_nav_params/: global_costmap_params.yaml
src/futurakart/futurakart_control/: CMakeLists.txt  package.xml
src/futurakart/futurakart_control/config/: control.yaml  robot_localization.yaml
src/futurakart/futurakart_control/config/interactive_marker_twist_server/: ackermann.yaml
src/futurakart/futurakart_control/config/key_teleop/: basic.yaml
src/futurakart/futurakart_control/launch/: control.launch  teleop.launch  teleop_joy.launch
src/futurakart/futurakart_control/src/: joy_interpreter_node.cpp  twist_to_ackermann.cpp
src/futurakart/futurakart_description/urdf/: blinky.urdf  (+4 more)
src/futurakart/futurakart_msgs/: CMakeLists.txt  package.xml
src/futurakart/futurakart_msgs/msg/: Drive.msg  Feedback.msg  MotorDrive.msg  MotorFeedback.msg  Status.msg
src/futurakart_2dnav/: CMakeLists.txt  package.xml
src/futurakart_2dnav/launch/: create_map.launch  futurakart_configuration.launch  global.conf  move_base.launch  navigate.launch  robot_setup_tf.launch  rtabmapping.launch  start_visualization.launch
src/futurakart_2dnav/param/: base_local_planner_params.yaml  costmap_common_params.yaml
src/futurakart_2dnav/resources/: costmap_common_params.yaml
src/futurakart_description/: CMakeLists.txt  package.xml
src/futurakart_description/urdf/: futurakart.urdf.xacro
src/futurakart_description/urdf/model/: dimensions.urdf.xacro  model.urdf.xacro
src/futurakart_description/urdf/properties/: futurakart.gazebo
src/futurakart_description/urdf/sensors/: kinect.urdf.xacro
src/futurakart_desktop/futurakart_desktop/: CMakeLists.txt  package.xml
src/futurakart_desktop/futurakart_stage/: CMakeLists.txt
src/futurakart_desktop/futurakart_viz/: CMakeLists.txt  package.xml
src/futurakart_desktop/futurakart_viz/launch/: display_model.launch  view_loc.launch  view_model.launch  view_robot.launch
src/futurakart_desktop/futurakart_viz/rviz/: localization.rviz  model.rviz  navigation.rviz  robot.rviz  rviz_navigation.rviz
src/futurakart_gazebo/: CMakeLists.txt  package.xml
src/futurakart_robot/futurakart_base/: CMakeLists.txt  package.xml
src/futurakart_robot/futurakart_base/cfg/: PidCoeff.cfg
src/futurakart_robot/futurakart_base/config/: PidCoeffDefault.yaml  diagnostic_analyzers.yaml
src/futurakart_robot/futurakart_base/include/futurakart_base/: futurakart_diagnostic_updater.h  futurakart_hardware.h
src/futurakart_robot/futurakart_base/launch/: base.launch  vision.launch
src/futurakart_robot/futurakart_base/launch/include/: kinect_visual_odom.launch  vision_conf.launch
src/futurakart_robot/futurakart_base/scripts/: pid_coeff_publisher.py
src/futurakart_robot/futurakart_base/src/: futurakart_base.cpp  futurakart_diagnostic_updater.cpp  futurakart_hardware.cpp
src/futurakart_robot/futurakart_bringup/: CMakeLists.txt  package.xml
src/futurakart_robot/futurakart_bringup/launch/: futurakart.launch
src/futurakart_robot/futurakart_bringup/scripts/: start_vision.py
src/futurakart_robot/futurakart_robot/: CMakeLists.txt  package.xml
src/futurakart_simulator/futurakart_mbed_emu/: CMakeLists.txt  package.xml
src/futurakart_simulator/futurakart_simulator/: CMakeLists.txt  package.xml
src/futurakart_simulator/futurakart_stage/: CMakeLists.txt  package.xml
src/futurakart_simulator/futurakart_stage/launch/: start.launch
src/futurakart_simulator/futurakart_stage/maps/: _map.pgm  _map.yaml
src/futurakart_simulator/futurakart_stage/stage/: carlike_robot.inc  fablab.world
src/moc_nodes/: CMakeLists.txt  package.xml
src/moc_nodes/launch/: moc_odom_setup.launch  moc_sensors_setup.launch
src/moc_nodes/scripts/: __init__.py  base_node.py  moc_kinect_node.py  moc_odom_node.py
src/moc_sensors/: CMakeLists.txt  package.xml
src/moc_sensors/launch/: moc_sensors_setup.launch
src/moc_sensors/scripts/: base_node.py  moc_kinect_node.py
temp/launch/: depthimage_to_laserscan.launch
tools/: install_rpi_ros_packages.bash  transform_angles.py  transform_frames.py
(+32 files in other folders)
