<?xml version="1.0"?>
<package>
  <name>futurakart_description</name>
  <version>0.0.1</version>
  <description>URDF robot description for Futurakart</description>

  <maintainer email="vfdev@todo.todo">vfdev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>freenect_stack</run_depend>


  <export>
  </export>
</package>
