<?xml version="1.0"?>
<package>
  <name>futurakart_gazebo</name>
  <version>0.0.1</version>
  <description>Launchfiles to use Futurakart in Gazebo.</description>

  <maintainer email="vfdev@todo.todo">vfdev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <!--<run_depend version_gte="0.0">futurakart_control</run_depend>-->
  <run_depend version_gte="0.0">futurakart_description</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
