<?xml version="1.0"?>
<package>
  <name>futurakart_msgs</name>
  <version>0.0.1</version>
  <description>Messages exclusive to Futurakart, especially for representing low-level motor commands and sensors.</description>

  <maintainer email="vfdev@todo.todo">vfdev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
