<?xml version="1.0"?>
<package>
  <name>futurakart_viz</name>
  <version>0.0.1</version>
  <description>Visualization launchers and helpers for Futurakart.</description>

  <maintainer email="vfdev@todo.todo">vfdev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <run_depend version_gte="0.0.1">futurakart_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
