<?xml version="1.0"?>
<package>
  <name>futurakart_simulator</name>
  <version>0.0.1</version>
  <description>Packages for simulating Futurakart.</description>

  <maintainer email="vfdev@todo.todo">vfdev</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend version_gte="0.0.1">futurakart_gazebo</run_depend>

  <export><metapackage/></export>
</package>
